# evergenesis

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/config/: CMakeLists.txt  tile_config.ixx
src/engine/core/: CMakeLists.txt  engine_core.ixx  graphics_context.cpp  graphics_context.ixx
src/engine/core/types/: color.ixx
src/engine/ecs/: CMakeLists.txt  component_storage.ixx  ecs_world.cpp  ecs_world.ixx  entity.cpp  entity.ixx  registry.cpp  registry.ixx  system.ixx
src/engine/ecs/components/: tile_map.ixx
src/engine/physics/: CMakeLists.txt
src/engine/physics/components/: collider.ixx  transform.ixx  velocity.ixx
src/engine/physics/systems/: physics_system.ixx
src/engine/platform/: CMakeLists.txt
src/engine/platform/sdl/: sdl_gl_graphics_context.cpp  sdl_gl_graphics_context.ixx  sdl_image_loader.ixx  sdl_platform.ixx
src/engine/renderer/: CMakeLists.txt  glyph_renderer.cpp  renderer_core.cpp  renderer_core.ixx
src/engine/rendering/: CMakeLists.txt  gl_backend.cpp  gl_backend.ixx  glyph_renderer.cpp  glyph_renderer.ixx  glyph_renderer_old.cpp  opengl_renderer.cpp  opengl_renderer.ixx  renderer.ixx  rendering_interface.ixx
src/engine/rendering/components/: glyph_renderable.ixx  tile_map.ixx
src/engine/rendering/glyph/: glyph.ixx  glyph_component.ixx  glyph_render_system.cpp  (+1 more)
src/game/: CMakeLists.txt
src/game/actors/: player_factory.ixx
src/renderer/: CMakeLists.txt  glyph_renderer.cpp  glyph_renderer.ixx  renderer_core.cpp  renderer_core.ixx
(+11 files in other folders)
